--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "docdash": "^1.2.0",
+    "lodash": "^4.17.15",
+    "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "sanitize-html": "^1.22.1"
   },
   "scripts": {
     "start": "react-scripts start",
