--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
-    "docs": "jsdoc -c jsdoc.conf.json"
+    "docs": "jsdoc -c jsdoc.conf.json",
+    "storybook": "start-storybook -p 6006",
+    "storybook-docs": "start-storybook --docs",
+    "build-storybook": "build-storybook",
+    "build-storybook-docs": "build-storybook --docs"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +44,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "babel-loader": "^8.2.2",
     "better-docs": "^1.4.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
